feat: 입력에 대한 결과 계산 기능 구현